2_Exploratory_Data_Analysis notebook: 2. Temporal Trends

--- a/notebook/01_Data_Cleaning.ipynb
+++ b/notebook/01_Data_Cleaning.ipynb
@@ -356,10 +356,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "31d0bb23-8f65-4cba-932b-823ce67077e9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cleaned dataset saved as 'amazon_sales_cleaned.csv'.\n"
+     ]
+    }
+   ],
    "source": [
     "# 6. Save Cleaned Data \n",
     "\n",
