--- a/notebook/04_Model_Building_and_Evaluation.ipynb
+++ b/notebook/04_Model_Building_and_Evaluation.ipynb
@@ -6,7 +6,27 @@
    "id": "3ee57d9d-3e02-4acc-aa66-d949aa52edc7",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# import libraries \n",
+    "\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "from sklearn.model_selection import GridSearchCV, RandomizedSearchCV, cross_val_score\n",
+    "from sklearn.ensemble import RandomForestRegressor, RandomForestClassifier\n",
+    "from sklearn.metrics import mean_squared_error, r2_score, accuracy_score, confusion_matrix, ConfusionMatrixDisplay\n",
+    "import xgboost as xgb\n",
+    "import shap\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
+    "\n",
+    "# Load cleaned data and prepared splits (reuse from notebook 3)\n",
+    "df = pd.read_csv('amazon_sales_cleaned.csv')\n",
+    "# Recreate features and splits as done in notebook 3 (code omitted for brevity, assume we have X_train, X_test, etc.)\n",
+    "\n",
+    "# For demonstration, we focus on two models: Random Forest Regressor for total_revenue and XGBoost Classifier for high_value.\n"
+   ]
   },
   {
    "cell_type": "code",
