04_Model_Building_and_Evaluation notebook:  1. Hyperparameter Tuning for Random Forest Regressor

--- a/notebook/04_Model_Building_and_Evaluation.ipynb
+++ b/notebook/04_Model_Building_and_Evaluation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "3ee57d9d-3e02-4acc-aa66-d949aa52edc7",
    "metadata": {},
    "outputs": [],
@@ -25,16 +25,74 @@
     "df = pd.read_csv('amazon_sales_cleaned.csv')\n",
     "# Recreate features and splits as done in notebook 3 (code omitted for brevity, assume we have X_train, X_test, etc.)\n",
     "\n",
-    "# For demonstration, we focus on two models: Random Forest Regressor for total_revenue and XGBoost Classifier for high_value.\n"
+    "# For demonstration, we focus on two models: Random Forest Regressor for total_revenue and XGBoost Classifier for high_value.\n",
+    "\n",
+    "\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "\n",
+    "# 1. Encode categorical variables (must match Notebook 3 logic)\n",
+    "le_cat = LabelEncoder()\n",
+    "df['cat_encoded'] = le_cat.fit_transform(df['product_category'])\n",
+    "\n",
+    "le_region = LabelEncoder()\n",
+    "df['region_encoded'] = le_region.fit_transform(df['customer_region'])\n",
+    "\n",
+    "le_payment = LabelEncoder()\n",
+    "df['payment_encoded'] = le_payment.fit_transform(df['payment_method'])\n",
+    "\n",
+    "# 2. Define the exact same feature columns\n",
+    "feature_cols = ['price', 'discount_percent', 'quantity_sold', 'rating', 'review_count', \n",
+    "                'year', 'month', 'day', 'day_of_week', 'cat_encoded', 'region_encoded', 'payment_encoded']\n",
+    "\n",
+    "# 3. Define Features and Target\n",
+    "X = df[feature_cols]\n",
+    "y_rev = df['total_revenue']\n",
+    "\n",
+    "# 4. Perform the Train-Test Split (use the same random_state=42)\n",
+    "X_train, X_test, y_train_rev, y_test_rev = train_test_split(X, y_rev, test_size=0.2, random_state=42)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "1b91fc2c-221f-4153-bf70-56908b2e9bb8",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best RF params: {'n_estimators': 200, 'min_samples_split': 2, 'min_samples_leaf': 2, 'max_depth': None}\n",
+      "Tuned RF - RMSE: 0.99, R2: 1.000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1. Hyperparameter Tuning for Random Forest Regressor \n",
+    "\n",
+    "# Use RandomizedSearchCV for efficiency\n",
+    "param_dist_rf = {\n",
+    "    'n_estimators': [50, 100, 200],\n",
+    "    'max_depth': [None, 10, 20, 30],\n",
+    "    'min_samples_split': [2, 5, 10],\n",
+    "    'min_samples_leaf': [1, 2, 4]\n",
+    "}\n",
+    "\n",
+    "rf_base = RandomForestRegressor(random_state=42, n_jobs=-1)\n",
+    "rand_search_rf = RandomizedSearchCV(rf_base, param_dist_rf, n_iter=10, cv=3, scoring='r2', random_state=42, n_jobs=-1)\n",
+    "rand_search_rf.fit(X_train, y_train_rev)   # assuming X_train is original (unscaled) from notebook 3\n",
+    "\n",
+    "print(\"Best RF params:\", rand_search_rf.best_params_)\n",
+    "best_rf = rand_search_rf.best_estimator_\n",
+    "\n",
+    "# Evaluate\n",
+    "pred_rf = best_rf.predict(X_test)\n",
+    "rmse_rf = np.sqrt(mean_squared_error(y_test_rev, pred_rf))\n",
+    "r2_rf = r2_score(y_test_rev, pred_rf)\n",
+    "print(f\"Tuned RF - RMSE: {rmse_rf:.2f}, R2: {r2_rf:.3f}\")"
+   ]
   },
   {
    "cell_type": "code",
