04_Model_Building_and_Evaluation notebook: 2. Hyperparameter Tuning for XGBoost Classifier (high-value)

--- a/notebook/04_Model_Building_and_Evaluation.ipynb
+++ b/notebook/04_Model_Building_and_Evaluation.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "id": "3ee57d9d-3e02-4acc-aa66-d949aa52edc7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import libraries \n",
+    "#import libraries\n",
     "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -25,50 +25,15 @@
     "df = pd.read_csv('amazon_sales_cleaned.csv')\n",
     "# Recreate features and splits as done in notebook 3 (code omitted for brevity, assume we have X_train, X_test, etc.)\n",
     "\n",
-    "# For demonstration, we focus on two models: Random Forest Regressor for total_revenue and XGBoost Classifier for high_value.\n",
-    "\n",
-    "\n",
-    "\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import LabelEncoder\n",
-    "\n",
-    "# 1. Encode categorical variables (must match Notebook 3 logic)\n",
-    "le_cat = LabelEncoder()\n",
-    "df['cat_encoded'] = le_cat.fit_transform(df['product_category'])\n",
-    "\n",
-    "le_region = LabelEncoder()\n",
-    "df['region_encoded'] = le_region.fit_transform(df['customer_region'])\n",
-    "\n",
-    "le_payment = LabelEncoder()\n",
-    "df['payment_encoded'] = le_payment.fit_transform(df['payment_method'])\n",
-    "\n",
-    "# 2. Define the exact same feature columns\n",
-    "feature_cols = ['price', 'discount_percent', 'quantity_sold', 'rating', 'review_count', \n",
-    "                'year', 'month', 'day', 'day_of_week', 'cat_encoded', 'region_encoded', 'payment_encoded']\n",
-    "\n",
-    "# 3. Define Features and Target\n",
-    "X = df[feature_cols]\n",
-    "y_rev = df['total_revenue']\n",
-    "\n",
-    "# 4. Perform the Train-Test Split (use the same random_state=42)\n",
-    "X_train, X_test, y_train_rev, y_test_rev = train_test_split(X, y_rev, test_size=0.2, random_state=42)\n"
+    "# For demonstration, we focus on two models: Random Forest Regressor for total_revenue and XGBoost Classifier for high_value.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "1b91fc2c-221f-4153-bf70-56908b2e9bb8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Best RF params: {'n_estimators': 200, 'min_samples_split': 2, 'min_samples_leaf': 2, 'max_depth': None}\n",
-      "Tuned RF - RMSE: 0.99, R2: 1.000\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 1. Hyperparameter Tuning for Random Forest Regressor \n",
     "\n",
@@ -96,11 +61,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "e106c951-5a92-46f2-a055-572fff1901f9",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Best XGBoost params: {'subsample': 1.0, 'n_estimators': 200, 'max_depth': 5, 'learning_rate': 0.1, 'colsample_bytree': 1.0}\n",
+      "Tuned XGBoost - Accuracy: 0.999\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'classification_report' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[22], line 22\u001b[0m\n\u001b[0;32m     20\u001b[0m acc_xgb \u001b[38;5;241m=\u001b[39m accuracy_score(y_test_hv, pred_xgb)\n\u001b[0;32m     21\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTuned XGBoost - Accuracy: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00macc_xgb\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m.3f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m---> 22\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124mClassification Report:\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m, \u001b[43mclassification_report\u001b[49m(y_test_hv, pred_xgb))\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'classification_report' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# 2. Hyperparameter Tuning for XGBoost Classifier (high-value) \n",
+    "\n",
+    "param_dist_xgb = {\n",
+    "    'n_estimators': [50, 100, 200],\n",
+    "    'max_depth': [3, 5, 7],\n",
+    "    'learning_rate': [0.01, 0.1, 0.2],\n",
+    "    'subsample': [0.8, 1.0],\n",
+    "    'colsample_bytree': [0.8, 1.0]\n",
+    "}\n",
+    "\n",
+    "xgb_clf = xgb.XGBClassifier(random_state=42, eval_metric='logloss')\n",
+    "rand_search_xgb = RandomizedSearchCV(xgb_clf, param_dist_xgb, n_iter=10, cv=3, scoring='accuracy', random_state=42, n_jobs=-1)\n",
+    "rand_search_xgb.fit(X_train_hv, y_train_hv)   # assuming X_train_hv from notebook 3\n",
+    "\n",
+    "print(\"\\nBest XGBoost params:\", rand_search_xgb.best_params_)\n",
+    "best_xgb = rand_search_xgb.best_estimator_\n",
+    "\n",
+    "# Evaluate\n",
+    "pred_xgb = best_xgb.predict(X_test_hv)\n",
+    "acc_xgb = accuracy_score(y_test_hv, pred_xgb)\n",
+    "print(f\"Tuned XGBoost - Accuracy: {acc_xgb:.3f}\")\n",
+    "print(\"\\nClassification Report:\\n\", classification_report(y_test_hv, pred_xgb))"
+   ]
   },
   {
    "cell_type": "code",
