04_Model_Building_and_Evaluation notebook: 3. Model Comparison Table

--- a/notebook/04_Model_Building_and_Evaluation.ipynb
+++ b/notebook/04_Model_Building_and_Evaluation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "id": "3ee57d9d-3e02-4acc-aa66-d949aa52edc7",
    "metadata": {},
    "outputs": [],
@@ -61,31 +61,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "e106c951-5a92-46f2-a055-572fff1901f9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Best XGBoost params: {'subsample': 1.0, 'n_estimators': 200, 'max_depth': 5, 'learning_rate': 0.1, 'colsample_bytree': 1.0}\n",
-      "Tuned XGBoost - Accuracy: 0.999\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'classification_report' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[22], line 22\u001b[0m\n\u001b[0;32m     20\u001b[0m acc_xgb \u001b[38;5;241m=\u001b[39m accuracy_score(y_test_hv, pred_xgb)\n\u001b[0;32m     21\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTuned XGBoost - Accuracy: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00macc_xgb\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m.3f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m---> 22\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124mClassification Report:\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m, \u001b[43mclassification_report\u001b[49m(y_test_hv, pred_xgb))\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'classification_report' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 2. Hyperparameter Tuning for XGBoost Classifier (high-value) \n",
     "\n",
@@ -117,7 +96,18 @@
    "id": "0eba3a73-69b5-4a07-b972-26a94853d0f1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 3. Model Comparison Table \n",
+    "\n",
+    "# Collect scores from various models (including baseline from notebook 3)\n",
+    "results = {\n",
+    "    'Model': ['Linear Regression', 'Decision Tree', 'Random Forest', 'Gradient Boosting', 'XGBoost', 'Tuned RF'],\n",
+    "    'RMSE': [985.2, 876.4, 812.3, 789.5, 776.1, 764.8],  # example numbers, replace with actual\n",
+    "    'R2': [0.45, 0.56, 0.62, 0.64, 0.65, 0.67]\n",
+    "}\n",
+    "results_df = pd.DataFrame(results)\n",
+    "print(\"\\nRegression Model Comparison:\\n\", results_df)"
+   ]
   },
   {
    "cell_type": "code",
